--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   -webkit-user-drag: none; /* Prevent dragging in WebKit browsers */
 }
 .info-container {
-  height: 200px;
+  height: 30vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,11 +21,11 @@ body {
 }
 
 .game {
-  background: url("images/background.png");
+  background: url("/images/background.png");
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 500px;
+  height: 70vh;
   display: flex;
   justify-content: center;
   align-items: center;
