--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   align-items: center;
   flex-direction: column;
   font-size: 20px;
+  background-color: rgb(187, 255, 197);
 }
 .start-btn {
   padding: 5px 15px;
@@ -44,4 +45,5 @@ body {
   object-fit: contain;
   width: 100%;
   height: 100%;
+  border-radius: 50%;
 }
